fix seach button label visibiity

--- a/packages/assets/scss/03-organisms/_header-hamburger.scss
+++ b/packages/assets/scss/03-organisms/_header-hamburger.scss
@@ -233,17 +233,6 @@ body.show-menu {
         span {
           display: inline-block;
         }
-
-        // not the button in navigation
-
-        .ma__button-search {
-
-          &,
-          &--secondary {
-
-            display: none;
-          }
-        }
       }
     }
 
@@ -451,13 +440,6 @@ body.show-menu {
   &__nav-search {
     padding: 15px 20px 15px;
 
-    .ma__header-search {
-
-      span {
-        display: none;
-      }
-    }
-
     @media ($bp-small-min) {
       display: none;
     }
@@ -469,10 +451,6 @@ body.show-menu {
 
       .ma__header-search {
         position: initial;
-      }
-
-      .ma__button-search__label {
-        display: none !important;
       }
 
       .ma__button-search--secondary {
