--- a/packages/assets/scss/03-organisms/_header.scss
+++ b/packages/assets/scss/03-organisms/_header.scss
@@ -368,7 +368,8 @@ body {
     .ma__header-search {
 
       span {
-        display: none;
+
+        @include ma-visually-hidden;
       }
 
     }
